--- a/templates/users/registration.html
+++ b/templates/users/registration.html
@@ -1,63 +1,124 @@
 {% load static %}
-<html lang="en">
+<!--<html lang="en">-->
 
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--    <link rel="icon" href="https://cdn.discordapp.com/icons/715958380556058684/773d6583cd1d7aef41e701783d353aef.webp?size=128" type="image/x-icon">-->
+<!--<meta name="description" itemprop="description"-->
+<!--        content="Play your playlists and favourites tracks, albums, and artists of YouTube with a Spotify styled UI" />-->
+<!--    <meta name="keywords"-->
+<!--        content="convert, convert playlists, transfer, syncing, smart links, free, apple music, streaming services, spotify, youtube" />-->
+<!--    <link rel="stylesheet" href="{% static "css/login.css" %}">-->
+<!--    <title>Youttify</title>-->
+<!--</head>-->
+
+<!--<body>-->
+
+
+<!--        <div class="signup_header">-->
+<!--            <a href="{% url "home:home" %}" target="">-->
+<!--            <img src="https://cdn.discordapp.com/attachments/768083738848133130/768372618880483328/spotify.svg"></img>-->
+<!--            </a>-->
+<!--        </div>-->
+
+<!--    <div class="signup_body">-->
+<!--        <form class="login_form" method='POST' action="{% url 'user:registration' %}"enctype="multipart/form-data">-->
+<!--            {% csrf_token %}-->
+
+<!--            <span class='label signup-title center-align'>Sign up for free to start listening.</span>-->
+
+
+
+
+
+<!--            <label for="sign-up-email" class="label">-->
+<!--                What's your email?-->
+
+<!--            </label>-->
+
+<!--            <input type="email" class="form_input" name="email" placeholder="Enter your email." required>-->
+
+
+<!--            <label for="sign-up-pwd" class="label">-->
+<!--                Create a password-->
+<!--            </label>-->
+<!--            <input type="password" class="form_input" id="pwd" name="password" placeholder="Create a password."-->
+<!--                required>-->
+
+<!--            <label for="sign-up-cpwd" class="label">-->
+<!--                Confirm your password-->
+<!--            </label>-->
+<!--            <input type="password" class="form_input" id="cpwd" name="confirm-password" oninput="checkPassword(this)"-->
+<!--                placeholder="Re-type your password" required>-->
+
+<!--            <button class='btn btn_log_in' type="submit">Sign up</button>-->
+<!--            <div class="divider"></div>-->
+<!--            <p class='label center-align'>Already have an account? <a href="{% url "user:login" %}">Log in</a>.</p>-->
+<!--        </form>-->
+<!--    </div>-->
+
+<!--</body>-->
+
+<!--</html>-->
+
+{% load static %}
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://cdn.discordapp.com/icons/715958380556058684/773d6583cd1d7aef41e701783d353aef.webp?size=128" type="image/x-icon">
-<meta name="description" itemprop="description"
+    <meta name="description" itemprop="description"
         content="Play your playlists and favourites tracks, albums, and artists of YouTube with a Spotify styled UI" />
     <meta name="keywords"
         content="convert, convert playlists, transfer, syncing, smart links, free, apple music, streaming services, spotify, youtube" />
     <link rel="stylesheet" href="{% static "css/login.css" %}">
     <title>Youttify</title>
 </head>
-
 <body>
-
-
-        <div class="signup_header">
-            <a href="{% url "home:home" %}" target="">
-            <img src="https://cdn.discordapp.com/attachments/768083738848133130/768372618880483328/spotify.svg"></img>
-            </a>
-        </div>
-
+    <div class="signup_header">
+        <a href=" {% url "home:home" %}">
+            <img src="https://cdn.discordapp.com/attachments/768083738848133130/768372618880483328/spotify.svg" alt="Spotify Logo">
+        </a>
+    </div>
     <div class="signup_body">
-        <form class="login_form" method='POST' action="{% url 'user:registration' %}"enctype="multipart/form-data">
+        <form class="login_form" method='POST' enctype="multipart/form-data">
             {% csrf_token %}
-
             <span class='label signup-title center-align'>Sign up for free to start listening.</span>
-
-
-
-
-
-            <label for="sign-up-email" class="label">
+             <label for="sign-up-email" class="label">
                 What's your email?
-
             </label>
-
             <input type="email" class="form_input" name="email" placeholder="Enter your email." required>
-
-
-            <label for="sign-up-pwd" class="label">
+<label for="first_name" class="label">
+                What's your first name?
+            </label>
+            <input type="text" class="form_input" name="first_name" pattern="[A-Za-z]+" placeholder="Enter your first name." required>
+<label for="Last_name" class="label">
+                What's your last name?
+            </label>
+            <input type="text" class="form_input" name="last_name" pattern="[A-Za-z]+" placeholder="Enter your last name." required>
+            <label for="pwd" class="label">
                 Create a password
             </label>
-            <input type="password" class="form_input" id="pwd" name="password" placeholder="Create a password."
-                required>
-
-            <label for="sign-up-cpwd" class="label">
+            <input type="password" class="form_input" id="pwd" name="password1" placeholder="Enter your password." required>
+            <label for="cpwd" class="label">
                 Confirm your password
             </label>
-            <input type="password" class="form_input" id="cpwd" name="confirm-password" oninput="checkPassword(this)"
-                placeholder="Re-type your password" required>
-
+            <input type="password" class="form_input" id="cpwd" name="password2" oninput="checkPassword(this)" placeholder="Re-type your password" required>
+            <label for="is_artist" class="label artist-label">
+                Are you an artist?
+                <div class="form_input artist-radio">
+                    <input type="radio" name="is_artist" value="True" {% if is_artist %}checked{% endif %}>
+                    <label class="radio-label">Yes</label>
+                    <input type="radio" name="is_artist" value="False" {% if not is_artist %}checked{% endif %}>
+                    <label class="radio-label">No</label>
+                </div>
+            </label>
+</label>
             <button class='btn btn_log_in' type="submit">Sign up</button>
             <div class="divider"></div>
-            <p class='label center-align'>Already have an account? <a href="{% url "user:login" %}">Log in</a>.</p>
+           <p class='label center-align'>Already have an account? <a href={% url "user:login" %}>Log in</a>.</p>
         </form>
     </div>
-
 </body>
-
 </html>
