--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,140 +1,123 @@
-html,
 body {
-  margin: 0;
-  padding: 0;
-  font-family: Circular, Helvetica Neue, Helvetica, Arial, sans-serif;
-  color: #222326;
-  font-weight: 400;
+    margin: 0;
+    padding: 0;
+    font-family: Circular, Helvetica Neue, Helvetica, Arial, sans-serif;
+    color: #222326;
+    font-weight: 400;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
-
-body {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  font-family: Circular, Helvetica Neue, Helvetica, Arial, sans-serif;
-}
-
 .signup_header {
-  height: 10vw;
-  min-height: 60px;
-  max-height: 108px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  border-bottom: 1px solid #d9dadc;
+    height: 10vw;
+    min-height: 60px;
+    max-height: 108px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #D9DADC;
 }
-
 .signup_header img {
-  /* height: 80%;
-  max-height: 60px;
-  min-height: 40px; */
-  height: 80%;
-  max-width: 200px;
-  min-height: 40px;
-  transform: translateX(-8px);
+    height: 80%;
+    max-width: 200px;
+    min-height: 40px;
+    transform: translateX(-8px);
 }
-
 .signup_body,
 .login_form {
-  background: white;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: left;
+    background: white;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
 }
-
 .login_form {
-  margin: 0 auto;
-  max-width: 450px;
-  width:90%;
-  /* min-width: 450px; */
+    margin: 0 auto;
+    max-width: 450px;
+    width: 90%;
 }
-
+.artist-label {
+    display: flex;
+    align-items: center;
+}
 .label {
-  color: white
-  display: inline-block;
-  margin-bottom: 5px;
-  font-weight: 700;
+    font-weight: 700;
 }
-
+.artist-radio {
+    display: flex;
+    margin-top:15px;
+    align-items: center;
+}
+.radio-label {
+    margin-right: 10px;
+    margin-bottom:12px;
+}
 input {
-  font-family: inherit;
-  display: block;
-  font-size: 16px;
-  line-height: 1;
-  color: #222326;
-  height: 40px;
-  padding: 0 12px;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #d9dadc;
-  border-radius: 0;
-  margin-bottom: 20px;
+    font-family: inherit;
+    display: block;
+    font-size: 16px;
+    line-height: 1;
+    color: #222326;
+    height: 40px;
+    padding: 0 12px;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #D9DADC;
+    border-radius: 0;
+    margin-bottom: 20px;
 }
-
 input:focus {
-  border-color: #919496;
-  transition: border-color 0.15s ease-in-out;
+    border-color: #919496;
+    transition: border-color 0.15s ease-in-out;
 }
-
 .btn {
-  font-size: 14px;
-  line-height: 1;
-  text-transform: uppercase;
-  font-family:inherit;
-  letter-spacing: 2px;
-  font-weight: 700;
-  border: 0px;
-  display: block;
-  padding: 16px 14px 18px;
-  outline: none;
-  border-radius: 30px;
-  transition: 0.25s;
-  cursor: pointer;
+    font-size: 14px;
+    line-height: 1;
+    text-transform: uppercase;
+    font-family: inherit;
+    letter-spacing: 2px;
+    font-weight: 700;
+    border: 0px;
+    display: block;
+    padding: 16px 14px 18px;
+    outline: none;
+    border-radius: 30px;
+    transition: 0.25s;
+    cursor: pointer;
 }
-
 .btn:hover {
-  transition: 0.25s;
+    transition: 0.25s;
 }
-
 .btn_log_in {
-  background: #15883e;
-  color: white;
-  border: 2px solid #15883e;
+    background: #15883E;
+    color: white;
+    border: 2px solid #15883E;
 }
 .btn_log_in:hover {
-  background: #1db954;
-  border: 2px solid #1db954;
+    background: #1DB954;
+    border: 2px solid #1DB954;
 }
-
 .btn_sign_up {
-  text-align: center;
-  background: white;
-  color: #616467;
-  border: 2px solid #616467;
-  text-decoration: none;
+    text-align: center;
+    background: white;
+    color: #616467;
+    border: 2px solid #616467;
+    text-decoration: none;
 }
-
 .btn_sign_up:hover {
-  background: #616467;
-  color: white;
+    background: #616467;
+    color: white;
 }
-
 .center-align {
-  text-align: center;
+    text-align: center;
 }
-
 .divider {
     height: 1px;
-    margin-top: 20px;
-    margin-bottom: 30px;
-    background: #d9dadc;
+    margin-top: 10px;
+    background: #D9DADC;
 }
-
-
 .signup-title {
     font-size: 28px;
     margin-bottom: 30px;
