--- a/templates/music/album_detail.html
+++ b/templates/music/album_detail.html
@@ -47,10 +47,10 @@ active
 
 <div class="playlist__list">
     <div class="playlist__header" >
-        <div class="playlist__headerTitle"># TITLE</div>
-        <div class="playlist__headerAlbum">ALBUM</div>
-        <div class="playlist__headerDate">DATE ADDED</div>
-        <div class="playlist__headerDuration">
+        <div class="playlist__headerTitle"># Title</div>
+        <div class="playlist__headerAlbum">Artist</div>
+        <div class="playlist__headerDate">Date Added</div>
+        <div class="playlist__headerDuration">Duration
         <img src="https://img.icons8.com/pastel-glyph/344/clock--v1.png" alt="">
         </div>
     </div>
