--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,9 @@
     <div class="navigation">
         <ul>
             <li>
-                <a href="#">
+                <a href="{% url "music:playlist" %}">
                     <span class="fa fas fa-plus-square"></span>
-                    <span>Create Playlist</span>
+                    <span>Your Playlist</span>
                 </a>
             </li>
 
