--- a/templates/music/music_detail.html
+++ b/templates/music/music_detail.html
@@ -15,7 +15,7 @@
 
       <div class="artist is-verified">
 
-        <div class="artist__header" style="background-image: url('{{ music.cover_image.url }}');">>
+        <div class="artist__header" style="background-image: url('{{ music.cover_image.url }}');">
 
           <div class="artist__info">
 
@@ -29,7 +29,7 @@
 
           {% for artist in music.artists.all %}
               <a href="{% url "artist:artist_detail" artist.pk %}">
-              <div class="artist__info__type">{{ artist.pseudonym }}</div>
+              <div class="artist__info__type" style="font-weight: 700;font-size: 12px;">{{ artist.pseudonym }}</div>
               </a>
               {% endfor %}
 
@@ -41,7 +41,7 @@
                   Play
                 </button>
 
-                <button class="button-light">ADD</button>
+                <button id="addToPlaylistBtn" class="button-light">ADD</button>
 
                 <button class="button-light more">
                     <i class="fas fa-heart fa-9x" style="color: #34a247; font-size: 13px; margin-left:6px;"></i>
@@ -544,6 +544,6 @@
 
 
 
-<!--<script src="https://kit.fontawesome.com/23cecef777.js" crossorigin="anonymous"></script>-->
+<script src="{% static 'js/music_detail.js' %}">  </script>
 </body>
 {% endblock %}
